Part-4/Exercise 4.05/Project-serve-v1.9/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2345
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2346
